--- a/content/content/lectures/part3/60_scl_containers.md.erb
+++ b/content/content/lectures/part3/60_scl_containers.md.erb
@@ -1,16 +1,18 @@
 ---
 title: "Scaling Pattern: Containers"
 desc: Containers and orchestration as a scaling strategy 
-homework: 1) TBD
+homework: 1) Self and Peer Assessments
 cat: scale
 ---
 <%= homework_hdr %>
+<%= include_topic :hw_self_peer_assess_v3 %>
+{:start="2"}
 
-* **Teams continue to work on nanoTwitter, heading into Nt 1.0!
+##### Ongoing work
+* **Teams continue to work on nanoTwitter, heading into Nt 1.0!**
 
-#### Tech Presentation
+##### Tech Presentation
 <%= callout("Tech Pres",  " Yirun Zhou on Global Scaling Architectures" ) %>
-
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
