Checkpoint work to git

--- a/content/content/lectures/part3/55_scl_logging.md.erb
+++ b/content/content/lectures/part3/55_scl_logging.md.erb
@@ -75,5 +75,8 @@ cat: scale
 #### Monitoring - Application Performance (APM)
 * https://www.channele2e.com/software/apm/apm-infrastructure-monitoring-converge/
 
+#### Things to do
+* [3 Ways to detect slow queries in Postgres](https://www.cybertec-postgresql.com/en/3-ways-to-detect-slow-queries-in-postgresql/)
+
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
