Checkpoint work to git

--- a/content/content/lectures/part3/60_scl_containers.md.erb
+++ b/content/content/lectures/part3/60_scl_containers.md.erb
@@ -10,6 +10,8 @@ cat: scale
 
 1. **Read** [No one understands the GIL](https://www.jstorimer.com/blogs/workingwithcode/8085491-nobody-understands-the-gil)
 
+1. **Look at** [Ruby Concurrency Gems](https://github.com/ruby-concurrency)
+
 {:start="3"}
 <%= include_topic :hw_self_peer_assess_v3 %>
 
@@ -96,7 +98,7 @@ end
 * Are not really constant; yes you get an interprer warning but that's all
 
 ##### Use Ruby Freeze 
-* `LOG_LEVEL = 1`.freeze
+* `LOG_LEVEL = 1.freeze`
 
 ##### Environment variables
 * Are just globals
