--- a/content/content/intro/05_syllabus.md.erb
+++ b/content/content/intro/05_syllabus.md.erb
@@ -7,8 +7,7 @@ title: Syllabus
 <% tbh.row("Instructor", "Pito Salas <pitosalas@brandeis.edu>") %>
 <% tbh.row("Location", "TBD") %>
 <% tbh.row("Office Hours", "Go to this link to reserve an appointment: https://calendly.com/pitosalas/ftf") %>
-<% tbh.row("Class Times", "Tuesday and Thursday, 3:30pm to 4:50pm\<br\>
-To be successful in this class it is strongly recommended that students attend the recitation on Wednesdays 5:00pm-6:20pm") %>
+<% tbh.row("Class Times", "Tuesday and Friday, 12:30pm to 1:50pm, and mandatory recitation, Tuesday 5:00pm-6:50pm") %>
 <% tbh.row("Location", "TBD") %>
 <% tbh.row("Prerequisites", "Cosi21a and Cosi166b (or permission)") %>
 <% tbh.row("Homework", "Daily homework assignments; Major nanoTwitter project; Team assignments. Success in this 4 credit hour course is based on the expectation that students will spend a minimum of 9 hours of study time per week in preparation for class (readings, papers, discussion sections, preparation for exams, etc.).  ") %>
@@ -31,10 +30,11 @@ This is most certainly an evolving space with new work happening both in academi
 #### Additional Information
 
 ##### Pre-requisites or permission
-Cosi21a and permission of the instructor are required for admission to this course. Permission is not required if you have taken Cosi166b. The reason for the prerequisite is that we jump very quickly into using a new language (Ruby) and framework (Sinatra.) If you are a good programmer and feel comfortable learning Ruby and Sinatra on your own, then I will be glad to give you permission. Please send me an email at pitosalas@brandeis.edu with your questions.
+Cosi21a and permission of the instructor are required for admission to this course. This is enforced rigorously **even for masters students**. Permission is not required if you have taken Cosi166b. The reason for the prerequisite is that we jump very quickly into using a new language (Ruby) and framework (Sinatra.) If you are a good programmer and feel comfortable learning Ruby and Sinatra on your own, then I will be glad to give you permission. Please send me an email at pitosalas@brandeis.edu with your questions.
 
 ##### Pre-work
-Students have all kinds of computers. I have nothing against Microsoft Windows, and you could take this course using just windows, but you're life (and ours) is just going to be more difficult. It just seems that the open source tools and libraries we use don't like Windows. So for this course, if your computer is set up with just windows, you are **required** to set up a Linux parition. It's not hard. Here are the details: <%= link_to_topic :linux_partition %>
+This course moves fast and so it's crucial that you review the following pre-work. Depending on how long ago you completed Cosi166 (Capstone)
+this might be more or less nnecessary. Also you might have a new computer or changed your config. Review <%= link_to_topic :cosi105b_prework %>
 
 <%= include_topic :syllabus_change_policy %>
 
