--- a/content/content/lectures/part1/05_welcome.md.erb
+++ b/content/content/lectures/part1/05_welcome.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Welcome
-desc: Introductions and logistics; we talk about how the course will work, grading, lectures, homeworks and so 
+desc: Introductions and logistics
 homework: 1) Make sure your development environmant is set up! 2) Review Ruby
 cat: general
 ---
@@ -8,9 +8,9 @@ cat: general
 
 <%= callout("Note for first day of class:", " Each day of class has a page on this web site. The first section of that page is always the homework due on that very day. So in other words, the homework listed here is actually 'pre-work' for day one. We will go over this in a little more detail during class.") %>
 
-1. **Development Environment**: It is very important that you take time before class to get your development environment set up and reliable. Please install the software just as I say. Not because I want to be bossy but because I know from bitter experience that while things may seem ok, later on you will hit problems. Sadly this is especially true on Microsoft Windows. Install Ruby 2.5. Here are my Ruby installation instructions: <%= link_to_topic :cosi105b_ruby_install_tips %>
+1. **Development Environment**: It is very important that you take time before class to get your development environment set up and reliable. Here are your instructions: <%= link_to_topic :cosi105b_prework %> Please install the software just as I say. Not because I want to be bossy but because I know from bitter experience that while things may seem ok, later on you will hit problems. Sadly this is especially true on Microsoft Windows.
 
-1. **Ruby**: Review your Ruby knowledge by going through [Learn Ruby The Hard Way](http://learnrubythehardway.org/book/preface.html). You should be at least up to Lesson 23. This will cover many of the basics up to functions. There is nothing to hand in here. But it's crucial that you really do the lessons and try the hands on work. No reading on your phone while on the treadmill! You shoring up the foundations on which your success in this course will be built!
+1. **Ruby**: Review your Ruby knowledge by going through all of [Learn Ruby The Hard Way](http://learnrubythehardway.org/book/preface.html). This will cover many of the basics up to functions. There is nothing to hand in here. But it's crucial that you really do the lessons and try the hands on work. No reading on your phone while on the treadmill! You shoring up the foundations on which your success in this course will be built!
 
 #### Introductions
 * Introduce Pito, and how I ended up here. Look at: <%= link_to_topic :pitofaq %>
@@ -35,9 +35,8 @@ cat: general
 * Let's take a tour of the web site
 * Let's take a tour of [Latte for this course](https://moodle2.brandeis.edu/course/view.php?id=15712)
 
-<%= callout("NB", " Every Wednesday 5:00 PM–6:20 PM we have a lab/workshop") %>
-* My experience teaching this course is that most of you will need this to be successful.
-* There is no lecture. Sometimes there's a hands-on workshop. Other times you work on your projects or homework. Either way we are available to help out (usually it's homework related.)
+<%= callout("NB", " Every Tuesday 5:00pm-6:50pm we have a lab/workshop") %>
+* My experience teaching this course is that most of you will need this to be successful. Attendance is **mandatory**. There is no lecture. Sometimes there's a hands-on workshop. Other times you work on your projects or homework. Either way we are available to help out (usually it's homework related.)
 
 #### Homework Info
 * Yes there is a fair bit of homework
@@ -51,5 +50,5 @@ cat: general
 * Notes about <%= link_to_topic :working_in_teams %>
 
 #### Next Class
-<%= callout("Remember", " Lab/Workshop/Recitation is Wednesday at 5:00pm and every week!") %>
+<%= callout("Remember", " Lab/Workshop/Recitation is Tuesday 5:00pm-6:50pm and every week!") %>
 * Look at homework: <%= link_to_next_lecture %>
