--- a/content/content/intro/05_syllabus.md.erb
+++ b/content/content/intro/05_syllabus.md.erb
@@ -37,7 +37,7 @@ This course moves fast and so it's crucial that you review the following pre-wor
 this might be more or less nnecessary. Also you might have a new computer or changed your config. Review <%= link_to_topic :cosi105b_prework %>
 
 <%= include_topic :syllabus_change_policy %>
-
+<%= include_topic :syllabus_add_drop_policy %>
 #### Crucial other Links
 * <%= link_to_intro :cosi105b_goals %>
 * <%= link_to_intro :course_toc %>
