--- a/content/content/lectures/part1/05_welcome.md.erb
+++ b/content/content/lectures/part1/05_welcome.md.erb
@@ -43,10 +43,10 @@ cat: general
 * Where to find it and how to hand it in: <%= link_to_topic :homework %>
 * Here's more information about <%= link_to_intro :cosi105b_grading %>
 
-#### Projecte x
+#### Project
 
 * All students will work in teams on their version of <%= link_to_topic :nt_outline %>
-* We will form teams of exactly 4 students. You will be assigned to a team.
+* We will form teams of exactly 4 students.
 * Notes about <%= link_to_topic :working_in_teams %>
 
 #### Next Class
