--- a/content/content/lectures/part1/20_ruby_review.md.erb
+++ b/content/content/lectures/part1/20_ruby_review.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Ruby Review
-desc: Restart your Ruby brain with questions about the programming assignment
+desc: Remind ourselves about Ruby
 homework: 1) Complete first draft ofprogramming assignment
 cat: programming
 homework: 1) First draft of IMS
@@ -15,23 +15,21 @@ homework: 1) First draft of IMS
 * <%= link_to_topic :classes_tut %>
 * <%= link_to_topic :inheritance_tut %>
 
-#### Ruby
-* Questions about the homework.
-* Ruby coding reminders:
-  * spaces not tabs, 2 spaces per tab
-  * Classes are CamelCased
-  * method_names and variable_names are lower case, with underlines
-  * filenames are lower case with underlines, named after the top_level_class.rb
-  * Classes should be less than 100 lines long
-  * Methods should be less than 15 lines long
-  * No standalone code or definitions. Everything should be part of a class
-  * No global variables
-  * Instance variables are always private
-  * Don't use @@foo
-  * instead of a method called "display" on a class, add a method called to_s which returns the class state as a text string. That way you can do a puts on it.
+#### Ruby Renubders
+* spaces not tabs, 2 spaces per tab
+* Classes are CamelCased
+* method_names and variable_names are lower case, with underlines
+* filenames are lower case with underlines, named after the top_level_class.rb
+* Classes should be less than 100 lines long
+* Methods should be less than 15 lines long
+* No standalone code or definitions. Everything should be part of a class
+* No global variables
+* Instance variables are always private
+* Don't use @@foo
+* instead of a method called "display" on a class, add a method called to_s which returns the class state as a text string. That way you can do a puts on it.
 
 #### Live coding
-  * Lets do this program: <%= link_to_topic :pa_code_classes_2 %>
+* Lets do this program: <%= link_to_topic :pa_code_classes_2 %>
 
 #### Discussions and questions
   * Review <%= link_to_topic :pa_interactive_music %>
