--- a/content/content/lectures/part1/30_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/30_sinatra_intro.md.erb
@@ -1,12 +1,12 @@
 ---
 title: Intro to Sinatra Servers
-desc: With that foundation, we now look deeper at how web servers work and Sinatra
+desc: Sinatra is a ruby application server
 homework: 1) Udacity Intro to Sinatra course
 cat: web
 ---
 <%= homework_hdr %>
 
-1. <%= partbadge %> <%= pdfbadge %> <%= timebadge %> **Udacity Sinatra Course**: Sign up to Udacity and take this easy free course: [Udacity Dynamic Web Applications with Sinatra](https://www.udacity.com/course/dynamic-web-applications-with-sinatra--ud268). Take all the lessons and do all the assignments, when you are done, answer the following warmup questions:
+1. <%= partbadge %> <%= pdfbadge %> **Udacity Sinatra Course**: Sign up to Udacity and take this easy free course: [Udacity Dynamic Web Applications with Sinatra](https://www.udacity.com/course/dynamic-web-applications-with-sinatra--ud268). Take all the lessons and do all the assignments, when you are done, answer the following warmup questions:
     * How is Routing in Sinatra different from Rails technique?
     * Where is the main program of Sinatra written? How does **it** get invoked?
     * How much time did doing the whole lesson take, and how useful was it?
