--- a/content/content/lectures/part3/35_scl_db.md.erb
+++ b/content/content/lectures/part3/35_scl_db.md.erb
@@ -6,7 +6,7 @@ cat: scale
 ---
 <%= homework_hdr %>
 
-1. <%= pdfbadge %> <%= timebadge %> <%= partbadge %> **Watch and Read and answer warmup questions**: [Basics of Database Sharding](https://youtu.be/W6pFKihvqH4) and [5 Early Lessons from Rapid High Availability Scaling](http://mikepackdev.com/blog_posts/40-5-early-lessons-from-rapid-high-availability-scaling-with-rails). Don't be concerned that Rails is mentioned, the concepts and principles are fundamental. Please read this and watch this material closely, it is quite important. As you read this please consider the anwers to these warmup questions:
+1. <%= pdfbadge %> <%= partbadge %> **Watch and Read and answer warmup questions**: [Basics of Database Sharding](https://youtu.be/W6pFKihvqH4) and [5 Early Lessons from Rapid High Availability Scaling](http://mikepackdev.com/blog_posts/40-5-early-lessons-from-rapid-high-availability-scaling-with-rails). Don't be concerned that Rails is mentioned, the concepts and principles are fundamental. Please read this and watch this material closely, it is quite important. As you read this please consider the anwers to these warmup questions:
     * What are some of the ways in which you know that its time to consider sharding or partitioniung your databases?
     * What is meant by "denormalization" and what does it have to do with scalability?
     * Can you clarify why the reading/viewing says that you are screwed if you don't create an index early?
