--- a/content/content/lectures/part3/45_scl_queues.md.erb
+++ b/content/content/lectures/part3/45_scl_queues.md.erb
@@ -6,7 +6,7 @@ cat: scale
 ---
 <%= homework_hdr %>
 
-1. <%= partbadge %> <%= timebadge %> <%= pdfbadge %> Read [Queues Don't Fix Overload](http://ferd.ca/queues-don-t-fix-overload.html) and [Architecting Rails as Microservice Applications](http://blog.codeship.com/architecting-rails-apps-as-microservices/?utm_source=rubyweekly&utm_medium=email) carefully. Don't worry that the article references Rails, most of the principles are general. Respond to the warmup questions.
+1. <%= partbadge %> <%= pdfbadge %> Read [Queues Don't Fix Overload](http://ferd.ca/queues-don-t-fix-overload.html) and [Architecting Rails as Microservice Applications](http://blog.codeship.com/architecting-rails-apps-as-microservices/?utm_source=rubyweekly&utm_medium=email) carefully. Don't worry that the article references Rails, most of the principles are general. Respond to the warmup questions.
     * Explain "back pressure" as used in the first article
     * There are many considerations in deciding whether to use a Service Oriented Architecture, and further, to deciding what services to factor out. Why would it matter how your actual programmers are organized into teams?
     * When your system is designed using services (or microservices), they have to communicate with each other. If service one needs an email sent out, and asks service two to do so, somehow that has to be passed from one to two. What are some of the common ways to do this?
