--- a/content/content/extras/01_cloud_deployment.md.erb
+++ b/content/content/extras/01_cloud_deployment.md.erb
@@ -5,11 +5,10 @@ homework: 1) ) Self and Peer assessments; 3) Read article and do warmups; 3) For
 cat: scale
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Code
 
 <%= include_topic :hw_self_peer_assess_v3 %>
 {:start="2"}
-1. <%= pdfbadge %> <%= timebadge %> <%= partbadge%>  **Read and Warmups**: Read this article by famous Software Engineering thinker [Martin Fowler](http://martinfowler.com): [Continuous Integration](http://martinfowler.com/articles/continuousIntegration.html). Please answer these warmup questions:
+1. <%= pdfbadge %> <%= partbadge%>  **Read and Warmups**: Read this article by famous Software Engineering thinker [Martin Fowler](http://martinfowler.com): [Continuous Integration](http://martinfowler.com/articles/continuousIntegration.html). Please answer these warmup questions:
     * Thinking about your nanoTwitter team, how close are you to meeting the criteria of Continous Integration laid out in this article?
     * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
     *  <%= deliverable "Post your response to these questions as a pdf on Latte" %>
