--- a/content/content/lectures/part1/25_web_intro.md.erb
+++ b/content/content/lectures/part1/25_web_intro.md.erb
@@ -8,7 +8,7 @@ cat: web
 
 1. <%= zipbadge %> **Programming:** Submit your final <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input, and write some tests. <%= deliverable "Your solution to the programming probem." %>
 
-#### Interesting, optional reading:
+##### Interesting, optional reading:
 * Here's an [Easy to follow, comprehensive HTTP Tutorial](https://www.tutorialspoint.com/http). As it goes into the later pages it dives into very detailed descriptions, which I think you can just skim.
 * There are many gems for using HTTP from Ruby. Here's a comprehensive discussion of one of the big ones, [http.rb is great](https://twin.github.io/httprb-is-great/)
 * Here's a nice introduction to writing Ruby-like Ruby: [Let's Read! - Eloquent Ruby](https://medium.com/@baweaver/lets-read-eloquent-ruby-ch-1-b2115d1416a6)
@@ -16,10 +16,7 @@ cat: web
 * And only for the super interested, if you want to go deeper into how TCP/IP works, I recommend [TCP/IP Illustrated](Of course if you want to go deeper, I recommend this book: [TCP/IP Illustrated](https://www.amazon.com/TCP-Illustrated-Protocols-Addison-Wesley-Professional/dp/0321336313/ref=sr_1_6?s=books&ie=UTF8&qid=1548377328&sr=1-6&keywords=tcpip+networking).
 * And this is just interesting: [How an internet mapping glitch turned a random kansas farm into a digital hell](https://splinternews.com/how-an-internet-mapping-glitch-turned-a-random-kansas-f-1793856052)
 
-
 #### Code review
-<blockquote class="pretty">"The crit is a model of learning whereby artists present their work to a group in order to gain feedback on how that work is being ‘read’ and ways that they might develop it further. They are a part of almost every art course at further and higher level education throughout the UK."</blockquote>
-
 * I will look for a couple of volunteers so we can look at the solution that they have submitted. See [Art Crits](http://q-art.org.uk/portfolio/art-crits-20-questions/)
 
 #### Review Internet Basics
