--- a/content/content/lectures/part1/30_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/30_sinatra_intro.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Intro to Sinatra Servers
+title: Intro to Web Servers
 desc: Sinatra is a ruby application server
 homework: 1) Udacity Intro to Sinatra course
 cat: web
