--- a/content/content/lectures/part1/45_sinatra_twitter.md.erb
+++ b/content/content/lectures/part1/45_sinatra_twitter.md.erb
@@ -21,7 +21,7 @@ cat: nt
 1. <%= zipbadge %> <%= pdfbadge %> **Read and Implement:** <%= link_to_topic :sinatra_series_2 %> and try to follow along and build the same app yourself. **Do the exercises** at the end of the reading and answer the warmup questions. <%= deliverable "Warmups response as a pdf; and your code as a .zip." %>
 
 #### Useful but not required reading
-* [Best Practices for desinging APIs](https://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api)
+* [Best Practices for designing APIs](https://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api)
 
 #### Discussion
 * Looking at the definitions of twitter features
