--- a/content/content/lectures/part1/45_sinatra_twitter.md.erb
+++ b/content/content/lectures/part1/45_sinatra_twitter.md.erb
@@ -19,6 +19,7 @@ cat: nt
      
      <%= deliverable "A more technical explanation of exactly what each command does. For example, if I comment -- where does that comment appear? What exactly is displayed on the homepage? Etc. Submit as a pdf." %>
 1. <%= zipbadge %> <%= pdfbadge %> **Read and Implement:** <%= link_to_topic :sinatra_series_2 %> and try to follow along and build the same app yourself. **Do the exercises** at the end of the reading and answer the warmup questions. <%= deliverable "Warmups response as a pdf; and your code as a .zip." %>
+1. <%= include_topic :coffee_assignment %>
 
 #### Useful but not required reading
 * [Best Practices for designing APIs](https://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api)
