--- a/content/content/lectures/part1/20_ruby_review.md.erb
+++ b/content/content/lectures/part1/20_ruby_review.md.erb
@@ -15,7 +15,7 @@ homework: 1) First draft of IMS
 * <%= link_to_topic :classes_tut %>
 * <%= link_to_topic :inheritance_tut %>
 
-#### Ruby Renubders
+#### Ruby Reminders
 * spaces not tabs, 2 spaces per tab
 * Classes are CamelCased
 * method_names and variable_names are lower case, with underlines
