--- a/content/content/lectures/part1/30_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/30_sinatra_intro.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Intro to Web Servers
+title: Intro to Sinatra
 desc: Sinatra is a ruby application server
 homework: 1) Udacity Intro to Sinatra course
 cat: web
@@ -12,7 +12,17 @@ cat: web
     * How much time did doing the whole lesson take, and how useful was it?
     * These examples have no database. How would you introduce data from a database into a Sinatra App? Be detailed.
     * <%= deliverable "pdf with your responses" %>
-1. <%= include_topic :coffee_assignment %>
+1. <%= partbadge %> **Read and Implement:** <%= link_to_topic :sinatra_series_1 %> and try to follow along and build the same app yourself. Now please answer these warmup questions:
+    * Research what RACK is and how it relates to Ruby, Sinatra, Rails or other parts of the technology  stack
+    * What was the hardest part for you following the instructions and getting it all to work>
+    * <%= deliverable "1: zip up your working code; 2: respond to the above warmup questions in a pdf" %>
+##### Useful but not mandatory reading
+* Accessing Activerecord using the [Sinatra ActiveRecord Extension](https://github.com/janko-m/sinatra-activerecord)
+* Tutorial: [Simple Database Driven Website with Heroku](https://samuelstern.wordpress.com/2012/11/28/making-a-simple-database-driven-website-with-sinatra-and-heroku/)
+* Rails Guide about [ActiveRecord Basics Guide](https://edgeguides.rubyonrails.org/active_record_basics.html)
+* Rails Guide about [ActiveRecord Migration Guide](https://edgeguides.rubyonrails.org/active_record_migrations.html)
+* The readme of Sinatra is a great resource: [Sinatra Readme](http://www.sinatrarb.com/intro.html)
+
 
 #### Review
 * <%= link_to_topic :www %>
@@ -20,6 +30,20 @@ cat: web
 
 <%= include_topic :what_is_sinatra %>
 <%= include_topic :hands_on_sinatra_demo %>
+
+
+#### Review from Capstone/Cosi166
+* Reminder: <%= link_to_topic :what_is_sinatra %>
+* Core concept from 166: <%= link_to_topic :models %>
+* Review: <%= link_to_topic :ar_db_mechanics %>
+* Introduction to [Sinatra Testing](http://sinatrarb.com/testing.html)
+* Testing with [Minitest/Spec](https://github.com/seattlerb/minitest)
+
+<%= include_topic :sinatra_technology_options %>
+
+#### Next Class
+* Look at homework: <%= link_to_next_lecture %>
+
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
