--- a/content/content/lectures/part2/05_database_basics.md.erb
+++ b/content/content/lectures/part2/05_database_basics.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Database Basics
 desc: Data modeling and database concepts
-homework: 1) Do PA - Sinatra Evite 1; 2) Do schema design exercise
+homework: 1) Do schema design exercise
 cat: web
 ---
 <%= homework_hdr %>
@@ -12,8 +12,6 @@ cat: web
     * In what way is a relational database similar or reminiscent of a spreadsheet?
     * Please list two concepts from the reading that you don't understand, and if you feel you understand it well, then the two most important ideas of this reading.
     * <%= deliverable "Warmups response as pdf" %>
-1. <%= zipbadge %> **Code:** Use what you've practiced in the Tutorial and Part 1 and 2 of the series and do <%= link_to_topic :pa_sinatra_evite_1 %>. <%= deliverable "Zip up the resulting code and submit it to Latte" %>
-
 <%= include_topic :data_modeling %>
 
 #### Next Class
