--- a/content/content/lectures/part1/25_web_intro.md.erb
+++ b/content/content/lectures/part1/25_web_intro.md.erb
@@ -19,9 +19,14 @@ cat: web
 #### Code review
 * I will look for a couple of volunteers so we can look at the solution that they have submitted. See [Art Crits](http://q-art.org.uk/portfolio/art-crits-20-questions/)
 
-#### Review Internet Basics
-<%= include_topic :internet_basics %>
-<%= include_topic :how_web_servers_work %>
+#### Review from Capstone/Cosi166
+* How: <%= link_to_topic :how_web_servers_work %>
+* Basics of the <%= link_to_topic :internet_basics %>
+* Basics of networking and the web: <%= link_to_topic :www %>
+* Core concept from 166: <%= link_to_topic :models %>
+* Review: <%= link_to_topic :ar_db_mechanics %>
+* Testing with [Minitest/Spec](https://github.com/seattlerb/minitest)
+
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
