--- a/content/content/intro/05_syllabus.md.erb
+++ b/content/content/intro/05_syllabus.md.erb
@@ -33,8 +33,7 @@ This is most certainly an evolving space with new work happening both in academi
 Cosi21a and permission of the instructor are required for admission to this course. This is enforced rigorously **even for masters students**. Permission is not required if you have taken Cosi166b. The reason for the prerequisite is that we jump very quickly into using a new language (Ruby) and framework (Sinatra.) If you are a good programmer and feel comfortable learning Ruby and Sinatra on your own, then I will be glad to give you permission. Please send me an email at pitosalas@brandeis.edu with your questions.
 
 ##### Pre-work
-This course moves fast and so it's crucial that you review the following pre-work. Depending on how long ago you completed Cosi166 (Capstone)
-this might be more or less nnecessary. Also you might have a new computer or changed your config. Review <%= link_to_topic :cosi105b_prework %>
+This course moves fast and so it's crucial that you review the following pre-work. Depending on how long ago you completed Cosi166 (Capstone) this might be more or less nnecessary. Also you might have a new computer or changed your config. Review <%= link_to_topic :cosi105b_prework %>
 
 <%= include_topic :syllabus_change_policy %>
 <%= include_topic :syllabus_add_drop_policy %>
