--- a/content/content/intro/20_tech_presentations.md.erb
+++ b/content/content/intro/20_tech_presentations.md.erb
@@ -9,18 +9,18 @@ Over the next 12 classes each student will give a techical presentation. I will 
 
 <% tbh = TableHelper.new(:normal) %>
 <% tbh.headers("Date", "(Proposed) Presenters", "Topic") %>
-<% tbh.row("Mar 5", "Brad Nesbitt", "NodeJS - with Express, compared to Sinatra") %>
-<% tbh.row("Mar 7", "Liaman Guo", "Fat Client Architectures - React") %>
-<% tbh.row("Mar 12", "Julian Ho", "Graph Databases - dgraph Amazon Neptune, Neo4J") %>
-<% tbh.row("Mar 14", "Ye Hong", "NoSQL Databases - MongoDB") %>
-<% tbh.row("Mar 19", "Fengzhencheng Zeng", "Containerizing - Docker") %>
-<% tbh.row("Mar 21", "Aaron Gold", "Client programming languages - Elm") %>
-<% tbh.row("Mar 26", "Xiangran Zhao", "Full Text Search - ElasticSearch")%>
-<% tbh.row("Mar 28", "Chauncy Fan", "Push Processing and Web Sockets") %>
-<% tbh.row("Apr 2", "Yang Shang", "API Architectures other than REST - GraphQL") %>
-<% tbh.row("Apr 4", "Ziyu Liu", "Alternate ORMs - Sequel gem") %>
-<% tbh.row("Apr 9",  "Ari Carr", "Database Sharding and Paritioning - ActiveRecord v6") %>
-<% tbh.row("Apr 11", "Yirun Zhou", "Global Scaling Architectures") %>
+<% tbh.row("?", "?", "NodeJS - with Express, compared to Sinatra") %>
+<% tbh.row("?", "?", "Fat Client Architectures - React") %>
+<% tbh.row("?", "?", "Graph Databases - dgraph Amazon Neptune, Neo4J") %>
+<% tbh.row("?", "?", "NoSQL Databases - MongoDB") %>
+<% tbh.row("?", "?", "Containerizing - Docker") %>
+<% tbh.row("?", "?", "Client programming languages - Elm") %>
+<% tbh.row("?", "?", "Full Text Search - ElasticSearch")%>
+<% tbh.row("?", ?", "Push Processing and Web Sockets") %>
+<% tbh.row("?", "?", "API Architectures other than REST - GraphQL") %>
+<% tbh.row("?", "?", "Alternate ORMs - Sequel gem") %>
+<% tbh.row("?",  "?", "Database Sharding and Paritioning - ActiveRecord v6") %>
+<% tbh.row("?", "?", "Global Scaling Architectures") %>
 
 <%= tbh.render %>
 
