--- a/content/content/lectures/part1/30_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/30_sinatra_intro.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Intro to Sinatra
 desc: Sinatra is a ruby application server
-homework: 1) Udacity Intro to Sinatra course
+homework: 1) Udacity Intro to Sinatra course; 2) Complete Sinatra Series 1
 cat: web
 ---
 <%= homework_hdr %>
@@ -25,6 +25,8 @@ cat: web
 * The readme of Sinatra is a great resource: [Sinatra Readme](http://www.sinatrarb.com/intro.Basics of networking and hte web
 * Introduction to [Sinatra Testing](http://sinatrarb.com/testing.html)
 
+#### Teams
+* We assign students to teams
 
 <%= include_topic :what_is_sinatra %>
 <%= include_topic :hands_on_sinatra_demo %>
