--- a/content/content/lectures/part1/45_sinatra_twitter.md.erb
+++ b/content/content/lectures/part1/45_sinatra_twitter.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Sinatra and Twitter
 desc: Introduction to Twitter and nanoTwitter
-homework: 1) Schema Design; 2) Write up definitions of the key twitter functions
+homework: 1) Write up your understanding of Twitter concepts; 2) Implement Sinatra Series 2; 3) Do Coffee Assignment
 cat: nt
 ---
 <%= homework_hdr %>
