--- a/content/content/lectures/part2/05_database_basics.md.erb
+++ b/content/content/lectures/part2/05_database_basics.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Database Basics
 desc: Data modeling and database concepts
-homework: 1) Do schema design exercise
+homework: 1) Do schema design exercise; 2) Implement Sinatra Series 3
 cat: web
 ---
 <%= homework_hdr %>
@@ -12,6 +12,7 @@ cat: web
     * In what way is a relational database similar or reminiscent of a spreadsheet?
     * Please list two concepts from the reading that you don't understand, and if you feel you understand it well, then the two most important ideas of this reading.
     * <%= deliverable "Warmups response as pdf" %>
+1. **Read:** <%= link_to_topic :sinatra_series_3 %> and try to follow along in code. Build the same app yourself.
 <%= include_topic :data_modeling %>
 
 #### Next Class
