--- a/content/content/lectures/part2/20_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/20_sinatra_architecture.md.erb
@@ -1,13 +1,13 @@
 ---
 title: Sinatra Architectures
 desc: Sinatra and Service Oriented Architectures
-homework: 1) Read and implement Sinatra Series Case Study; Complete nt0.1 as a team
+homework: 1) Read and implement Sinatra Series 4; Complete nt0.1 as a team
 cat: web
 ---
 
 <%= homework_hdr %>
 
-1. **Read:** <%= link_to_topic :sinatra_series_4 %> and try to follow along in code. This will be due after the break. build the same app yourself.
+1. **Read:** <%= link_to_topic :sinatra_series_4 %> and try to follow along in code. TBuild the same app yourself.
 1. <%= partbadge %> <%= codebadge %> **Complete nt 0.1 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Walk through of a basic scenario
