--- a/content/content/lectures/part1/25_web_intro.md.erb
+++ b/content/content/lectures/part1/25_web_intro.md.erb
@@ -6,7 +6,7 @@ cat: web
 ---
 <%= homework_hdr %>
 
-1. <%= zipbadge %> **Programming:** Submit your final <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input, and write some tests. <%= deliverable "Your solution to the programming probem." %>
+1. <%= zipbadge %> **Programming:** Submit your final <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input, and write some tests. <%= deliverable "Your solution to the programming problem." %>
 
 ##### Interesting, optional reading:
 * Here's an [Easy to follow, comprehensive HTTP Tutorial](https://www.tutorialspoint.com/http). As it goes into the later pages it dives into very detailed descriptions, which I think you can just skim.
