--- a/content/content/lectures/part1/45_sinatra_twitter.md.erb
+++ b/content/content/lectures/part1/45_sinatra_twitter.md.erb
@@ -6,7 +6,7 @@ cat: nt
 ---
 <%= homework_hdr %>
 
-1. <%= pdfbadge %> <% partbadge %> **Twitter**: Clarify your understanding of twitter.com. If you don't use Twitter or don't 'believe in it', still sign up for an account just to play. Make sure you understand each of the core concepts of Twitter:
+1.  <%= partbadge %> <%= pdfbadge %>**Twitter**: Clarify your understanding of twitter.com. If you don't use Twitter or don't 'believe in it', still sign up for an account just to play. Make sure you understand each of the core concepts of Twitter:
     * a username (aka Twitter handle) 
     * the homepage
     * to "mention": when you write @pitosalas in a tweet;
