--- a/content/content/extras/02_ruby_firehose.md.erb
+++ b/content/content/extras/02_ruby_firehose.md.erb
@@ -12,7 +12,7 @@ homework: Work on "Movies 1" and Ruby the Hard Way (RHW) to lesson 18
 * Let's look at some of the problems you might have encountered in [RHW](http://learnrubythehardway.org/book/)
 
 #### Ruby Live Coding Demonstration
-<%= include_topic :intro_tut %>
+<%= include_topic :ruby_intro_tut %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
