--- a/content/content/intro/50_links_resources.md.erb
+++ b/content/content/intro/50_links_resources.md.erb
@@ -8,14 +8,14 @@ Here are various resources that will come in handy during this class.
 
 #### Resources
 
-* Teaching Assistant: Chi Zang - chizhang@brandeis.edu
+* Teaching Assistant: [Julian Ho](julianho@brandeis.edu)
 
-#### Key pages on this site
+#### Links that you may want to look up again
 * <%= link_to_topic :sinatra_technology_options %>
-
-#### Sinatra
-* [Minitest/Spec](https://github.com/seattlerb/minitest)
-* [Sinatra Testing](http://sinatrarb.com/testing.html)
-* [Sinatra ActiveRecord Extension](https://github.com/janko-m/sinatra-activerecord)
+* Here's an [Easy to follow, comprehensive HTTP Tutorial](https://www.tutorialspoint.com/http)
+* Here's a great and fairly thorough introduciton to tcpip and networking, [TCP/IP Networking Guide](http://www.penguintutor.com/linux/basic-network-reference)
+* For TDD and testiung in general we will use [Minitest/Spec](https://github.com/seattlerb/minitest)
+* An intro to [Sinatra Testing](http://sinatrarb.com/testing.html)
+* A gem to make it simple to use ActiveRecord with Sinatra: [Sinatra ActiveRecord Extension](https://github.com/janko-m/sinatra-activerecord)
 * [ActiveRecord Basics Guide](https://edgeguides.rubyonrails.org/active_record_basics.html)
 * [ActiveRecord Migration Guide](https://edgeguides.rubyonrails.org/active_record_migrations.html)
