--- a/content/content/lectures/part1/30_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/30_sinatra_intro.md.erb
@@ -20,13 +20,16 @@ cat: web
 ##### Useful but not mandatory reading
 * Accessing Activerecord using the [Sinatra ActiveRecord Extension](https://github.com/janko-m/sinatra-activerecord)
 * Tutorial: [Simple Database Driven Website with Heroku](https://samuelstern.wordpress.com/2012/11/28/making-a-simple-database-driven-website-with-sinatra-and-heroku/)
-* Rails Guide about [ActiveRecord Basics Guide](https://edgeguides.rubyonrails.org/active_record_basics.html)
-* Rails Guide about [ActiveRecord Migration Guide](https://edgeguides.rubyonrails.org/active_record_migrations.html)
 * The readme of Sinatra is a great resource: [Sinatra Readme](http://www.sinatrarb.com/intro.Basics of networking and hte web
 * Introduction to [Sinatra Testing](http://sinatrarb.com/testing.html)
 
 #### Teams
 * We assign students to teams
+
+#### More Review from 166
+* Core concept from 166: <%= link_to_topic :models %>
+* Review: <%= link_to_topic :ar_db_mechanics %>
+* Testing with [Minitest/Spec](https://github.com/seattlerb/minitest)
 
 <%= include_topic :what_is_sinatra %>
 <%= include_topic :hands_on_sinatra_demo %>
