--- a/content/content/intro/15_nt_links.md.erb
+++ b/content/content/intro/15_nt_links.md.erb
@@ -8,18 +8,12 @@ Welcome to nanoTwitter. You will be working with a team of 2,3 or 4 studetns (ch
 
 * We will not be creating a total clone of Twitter of course. But the key functionality, user interface, routes and details will all be there. They are described in detail in <%= link_to_topic :nt_functionality %>
 * In order to help you in your project planning, a general outline is provided. It is certainly not the only way to organize it and you may vary from it as you decide to. Here is the <%= link_to_topic :nt_outline %>
-* 
+* There are different ways of designing the nanoTwitter application. In this link we review some of the considerations and provide some guidelines: <%= link_to_topic :nt_arch %>
 
-* <%= link_to_topic :nt_arch %>
-* 
-
-#### Twitter's Architecture Reading
+#### Important Readings and Resources
 * [Twitter: From Ruby on Rails to the JVM](http://youtu.be/ohHdZXnsNi8)
 * [Real Time Delivery Architecture at Twitter](http://www.infoq.com/presentations/Real-Time-Delivery-Twitter)
 * [Timelines at Scale](http://www.infoq.com/presentations/Twitter-Timeline-Scalability)
-
-#### Scaling Reading
 * [Rare peek into the massive scale of AWS](http://www.enterprisetech.com/2014/11/14/rare-peek-massive-scale-aws/)
-
-#### Loader.io Tips
 * [Loader.io Test Types](http://support.loader.io/article/16-test-types)
+
