--- a/content/content/lectures/part2/75_nt_intro.md.erb
+++ b/content/content/lectures/part2/75_nt_intro.md.erb
@@ -20,6 +20,7 @@ cat: web
   * Demo your code
   * Let's talk about challenges encountered
   * Who is still unsure about the role of a "client library" in a service oriented architecture?
+  * Plan for Technical Presentations
 
 #### All About nano Twitter
 
