--- a/content/content/lectures/part2/85_cloudarch.md.erb
+++ b/content/content/lectures/part2/85_cloudarch.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Architecture and the Cloud
 desc: We start going in to more complicated core architectures, which will serve as the foundation for nanoTwitter
-homework: 1) Submit Sinatra Series 4 assignment 2) Teams continue to work on nT
+homework: 1) Read and respond to article
 cat: nt
 ---
 <%= homework_hdr %>
