--- a/content/content/lectures/part2/80_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/80_sinatra_architecture.md.erb
@@ -1,14 +1,14 @@
 ---
-title: Sinatra Architectures
-desc: Sinatra and Service Oriented Architectures
+title: Starting to think about scaling
+desc: Sinatra, Service Oriented Architectures and scaling
 homework: 1) Read and implement Sinatra Series 4; Complete nt0.1 as a team
 cat: web
 ---
 
 <%= homework_hdr %>
 
-1. **Read:** <%= link_to_topic :sinatra_series_4 %> and try to follow along in code. TBuild the same app yourself.
-1. <%= partbadge %> <%= codebadge %> **Complete nt 0.1 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
+1. **Read:** <%= link_to_topic :sinatra_series_4 %> and try to follow along in code. Build the same app yourself.
+1. <%= partbadge %> <%= zipbadge %> **Complete nt 0.1 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Walk through of a basic scenario
 * Baseball scoring application - First cut
@@ -28,3 +28,4 @@ cat: web
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
+ 
