--- a/content/content/intro/50_links_resources.md.erb
+++ b/content/content/intro/50_links_resources.md.erb
@@ -19,3 +19,4 @@ Here are various resources that will come in handy during this class.
 * A gem to make it simple to use ActiveRecord with Sinatra: [Sinatra ActiveRecord Extension](https://github.com/janko-m/sinatra-activerecord)
 * [ActiveRecord Basics Guide](https://edgeguides.rubyonrails.org/active_record_basics.html)
 * [ActiveRecord Migration Guide](https://edgeguides.rubyonrails.org/active_record_migrations.html)
+* [Ruby Debugging Cheat Sheet](https://www.schneems.com/2016/01/25/ruby-debugging-magic-cheat-sheet.html)
