--- a/content/content/lectures/part2/80_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/80_sinatra_architecture.md.erb
@@ -8,7 +8,7 @@ cat: web
 <%= homework_hdr %>
 
 1. **Read:** <%= link_to_topic :sinatra_series_4 %> and try to follow along in code. Build the same app yourself.
-1. <%= partbadge %> <%= zipbadge %> **Complete nt 0.1 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
+1. <%= partbadge %> <%= teambadge %> <%= zipbadge %> **Complete nt 0.1 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Walk through of a basic scenario
 * Baseball scoring application - First cut
@@ -25,6 +25,9 @@ cat: web
 1. How Unit testing is done with Mintest/Spec et al.
 1. The idea of Test Driven Development
 1. HTTP and it's different Verbs like GET, PUT, POST etc.
+
+#### Discussion
+* <%= link_to_topic :sinatra_series_4 %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
