--- a/content/content/lectures/part2/80_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/80_sinatra_architecture.md.erb
@@ -16,6 +16,11 @@ cat: web
   * A local official enters stats as the game progresses
   * Default implementation with a single "monolythic" app
   * How will things break down
+* Assuming:
+  * variable t = total number of teams in this league (guess 100)
+  * variable s = number of games happening simultatnuously (guess: 4)
+  * Given a scoreboard app written in Sinatra 
+    * What is a good assumption for the number of times per second the page will refresh?
 
 #### Review of everything so far
 1. What a web server is and how Sinatra helps you create one
